# event-management

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  pyproject.toml
event_management_server/: runner.dev.sh
event_management_server/api/: api.py
event_management_server/api/api_core/: api_v1.py  routes.py
event_management_server/api/api_core/endpoints/: accounts_api.py  events_api.py
event_management_server/api/api_core/schemas/: accounts_schemas.py  error_schemas.py  event_schemas.py  response_schema.py
event_management_server/api/api_core/utils/: exceptions.py  response.py
event_management_server/apps/accounts/: admin.py  models.py
event_management_server/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_user_is_staff.py  0004_alter_user_phone_number.py  (+1 more)
event_management_server/apps/events/: admin.py  models.py
event_management_server/configs/: example_file.env
event_management_server/data_models/: events_models.py
event_management_server/runners/: asgi.py  wsgi.py
event_management_server/services/auth_services/: auth_checker.py  exc.py  jwt_cache_handler.py  security.py  utils.py
event_management_server/services/cache/: redis_cache.py
event_management_server/services/db_handlers/: accounts_handler.py  events_handler.py
event_management_server/services/settings_utils/: utils.py
event_management_server/services/singleton/: __init__.py
event_management_server/settings/: __init__.py  api_settings.py  base_settings.py  internationalization_settings.py  jwt_settings.py  static_settings.py  urls.py
(+6 files in other folders)
